# tradingtutor

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
backend/: agent.py  data.py  game.py  research.py  strategies.py  supervisor.py
tests/: test_core.py
